<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/priority">
            <menu>
                <item
                    android:id="@+id/nav_critical"
                    android:title="@string/priority_critical" />
                <item
                    android:id="@+id/nav_major"
                    android:title="@string/priority_major" />
                <item
                    android:id="@+id/nav_normal"
                    android:title="@string/priority_normal" />
                <item
                    android:id="@+id/nav_low"
                    android:title="@string/priority_low" />
            </menu>
        </item>
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
        </menu>
    </item>

</menu>
